--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
         <a href="index.html">ikshiGen AI</a>
       </div>
       <ul class="nav-links">
-        <li><a href="aboutus.html" class="nav-link">About Us</a></li>
+        <li><a href="aboutus.html" class="nav-link active">About Us</a></li>
         <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
         <li><a href="blog.html" class="nav-link">Blogs</a></li>
         <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
@@ -38,6 +38,7 @@
         </svg></a>
     </nav>
     <div class="dropdown-menu" id="dropdown-menu">
+      <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
       <a href="blog.html">Blogs</a>
@@ -60,9 +61,9 @@
       <img src="src/blog.png" alt="Image 2" />
       <div class="text">
         <a href="blog.html">
-          <h2 class="slide-title">Recent Blogs</h2>
+          <h2 class="slide-title">Recent Trends in AI</h2>
         </a>
-          <p class="slide-description">Read the latest blogs posted by our team.</p>
+          <p class="slide-description">Read the latest news about AI.</p>
       </div>
     </div>
 
