--- a/blog.html
+++ b/blog.html
@@ -89,16 +89,16 @@
     <h2>Recent Posts</h2>
     <article>
       <img src="src/portfolio-01.jpg" alt="Recent Post 1">
-      <h3>The strongest and sweetest songs yet remain to be sung</h3>
-      <p>Awa Melvine | Jan 18, 2019</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+      <h3>RAG Architecture: A Brief Overview</h3>
+      <p>Kishorekumar | 18th September, 2024</p>
+      <p>Framework that enhances generative models by incorporating a retrieval component...  </p>
       <a href="#" class="read-more">Read More</a>
     </article>
     <article>
       <img src="src/portfolio-02.jpg" alt="Recent Post 2">
-      <h3>That love is all there is, is all we know of love</h3>
-      <p>Awa Melvine | Jan 18, 2019</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+      <h3>Machine Learning Workflow Explained</h3>
+      <p>Harshad Gore| 1st October, 2024</p>
+      <p>Mastering the machine learning workflow is the key...."</p>
       <a href="#" class="read-more">Read More</a>
     </article>
   </section>
@@ -120,8 +120,8 @@
       <h2>CONTACT US</h2>
       <p>+91 8484875370</p>
       <p>
-        <a href="mailto:contact.ikshigen@gmail.com">
-          ikshigenaimitaoe@gmail.com
+        <a href="mailto:ikshigenai@mitaoe.ac.in">
+          ikshigenai@mitaoe.ac.in
         </a>
       </p>
     </div>
