--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         </svg></a>
     </nav>
     <div class="dropdown-menu" id="dropdown-menu">
-      <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
       <a href="blog.html">Blogs</a>
@@ -106,7 +105,8 @@
           </a>
         </div>
         <div class="card">
-          <a href="https://github.com/ikshigenaimitaoe/Our-Projects/tree/main/Flight-price-prediction%20using%20AWS%20SageMaker">
+          <a
+            href="https://github.com/ikshigenaimitaoe/Our-Projects/tree/main/Flight-price-prediction%20using%20AWS%20SageMaker">
             <img src="src/flight-preddiction.gif" alt="Project 2">
             <div class="title-description">
               <h4>Flight Price Prediction</h4>
@@ -123,7 +123,7 @@
             </div>
           </a>
         </div>
-        <div class="card">
+        <!-- <div class="card">
           <a href="#">
             <img src="src/portfolio-04.jpg" alt="Project 1">
             <div class="title-description">
@@ -158,7 +158,7 @@
               <p>Short description for project 1.</p>
             </div>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="scroll-button">
@@ -187,8 +187,8 @@
       <h2>CONTACT US</h2>
       <p>+91 8484875370</p>
       <p>
-        <a href="mailto:contact.ikshigen@gmail.com">
-          ikshigenaimitaoe@gmail.com
+        <a href="mailto:ikshigenai@mitaoe.ac.in">
+          ikshigenai@mitaoe.ac.in
         </a>
       </p>
     </div>
