--- a/ourteam.html
+++ b/ourteam.html
@@ -72,14 +72,14 @@
                 <p>Mrs. Sunita Barve</p>
             </div>
             <div class="guide-postion">
-                <p>Assistant Professor</p>
+                <p>Professor & Deputy Director</p>
             </div>
             <div class="guide-in-profile">
                 <a href="https://www.linkedin.com/in/rajesh-ghonge-7b1b7b1b/"><img src="src/linkedin.png"
                         alt="LinkedIn"></a>
             </div>
             <div class="guide-intro">
-                <p>Mrs. Sunita Bharwe is an inspiring and a great teacher with over 20 years of experience in the as a
+                <p>Mrs. Sunita Barve is an inspiring and a great teacher with over 20 years of experience in the as a
                     Professor
                     and Deputy Director Academics and Research at MIT Academy of Engineering, Alandi. As a mentor and
                     guide,
@@ -105,7 +105,7 @@
                             <img class="team-img" src="src/Kishore.jpg">
                         </div>
                         <p class="text-blk name">
-                            Kishor Vishwanathan
+                            Kishorekumar Vishwanathan
                         </p>
                         <p class="text-blk position">
                             Founder ,Lead
@@ -149,6 +149,34 @@
                                     src="src/instagram-solid_.png">
                             </a>
                             <a href="mailto:sanvihitasnehi137@gmail.com"  >
+                                <img src="src/email_.png" alt="Email Icon">
+                            </a>                                                       
+                        </div>
+                    </div>
+                </div>
+                <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+                    <div class="team-card">
+                        <div class="img-wrapper">
+                            <img class="team-img"
+                                src="src/aditi-patil.jpg">
+                        </div>
+                        <p class="text-blk name">
+                           Aditi Patil
+                        </p>
+                        <p class="text-blk position">
+                            Management Team Lead
+                        </p>
+                        <div class="social-media-links">
+                            <a href="https://www.linkedin.com/in/aditi-patil-151201290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"  >
+                                <img
+                                    src="src/linkedin-in_.png">
+                            </a>
+                             
+                            <a href="https://www.instagram.com/aditipatil_1709/?utm_source=ig_web_button_share_sheet"  >
+                                <img
+                                    src="src/instagram-solid_.png">
+                            </a>
+                            <a href="mailto:aaditi.aspatil@gmail.com"  >
                                 <img src="src/email_.png" alt="Email Icon">
                             </a>                                                       
                         </div>
@@ -230,9 +258,9 @@
         <div class="footer-section-excellence">
             <h2>CONTACT US</h2>
             <p>+91 8484875370</p>
-            <p>
-                <a href="mailto:contact.ikshigen@gmail.com">ikshigenaimitaoe@gmail.com</a>
-            </p>
+            <a href="mailto:ikshigenai@mitaoe.ac.in">
+                ikshigenai@mitaoe.ac.in
+              </a>
         </div>
         <div class="footer-section-competition">
             <h2>JOIN NOW</h2>
