--- a/whatwedo.html
+++ b/whatwedo.html
@@ -169,9 +169,9 @@
           <h2>CONTACT US</h2>
           <p>+91 8484875370</p>
           <p>
-            <a href="mailto:contact.ikshigen@gmail.com"
-              >ikshigenaimitaoe@gmail.com</a
-            >
+            <a href="mailto:ikshigenai@mitaoe.ac.in">
+              ikshigenai@mitaoe.ac.in
+            </a>
           </p>
         </div>
         <div class="footer-section-competition">
