--- a/add.html
+++ b/add.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create New Post</title>
+    <title>Create A New Blog</title>
     <link rel="stylesheet" href="css/add.css">
+    <link rel="icon" href="src/club-logo.png" type="image/png" />
 </head>
 
 <body>
