--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
+  <title>ikshiGen-AI Home</title>
   <link rel="stylesheet" href="css/header-footer-common.css">
   <link rel="stylesheet" href="css/aboutus.css">
   <link rel="icon" href="src/club-logo.png" type="image/png">
@@ -61,7 +61,7 @@
       <img src="src/about-left-image.png" alt="About Us">
     </div>
     <div class="about-us-content">
-      <h2>About Us</h2>
+      <h2>About Club</h2>
       <p>AI Club Of <span class="mitaoe">MITAOE</span> Aspiring Developers & Visit Our Social Media For <span
           class="reg-update">Regular Update</span>.</p>
       <div class="about-us-followers">
