--- a/ourteam.html
+++ b/ourteam.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="src/club-logo.png" alt="logo" /></a>
-                <a href="index.html">ikshiGen AI</a>
+                <a href="index.html">Our Team</a>
             </div>
             <ul class="nav-links">
                 <li><a href="aboutus.html" class="nav-link">About Us</a></li>
