--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ikshiGen-AI</title>
+  <title>About Us</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/header-footer-common.css" />
   <link rel="icon" href="src/club-logo.png" type="image/png" />
