news, minor fix
Co-Authored-By: Harshad Gore <159244324+Harshad-Gore@users.noreply.github.com>

--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@
     <div class="mySlides">
       <img src="src/blog.png" alt="Image 2" />
       <div class="text">
-        <a href="blog.html">
+        <a href="News/index.html">
           <h2 class="slide-title">Recent Trends in AI</h2>
         </a>
           <p class="slide-description">Read the latest news about AI.</p>
@@ -70,7 +70,7 @@
     <div class="mySlides">
       <img src="src/aiprojects.png" alt="Image 3" />
       <div class="text">
-        <a href="aboutus.html">
+        <a href="index.html#portfolio-section">
           <h2 class="slide-title">Our Projects</h2>
         </a>
           <p class="slide-description">Click here and discover our Team Member's projects.</p>
