--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
   <!-- portfolio -->
 
-  <div class="portfolio-body">
+  <div id="portfolio-section" class="portfolio-body">
     <h3>Our Portfolio</h3>
     <h2>Discover Our Recent <span class="highlight1">Projects</span><br> And <span class="highlight2">Showcases</span>
     </h2>
