--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="card">
           <a
-            href="https://github.com/ikshigenaimitaoe/Our-Projects/tree/main/Flight-price-prediction%20using%20AWS%20SageMaker">
+            href="projects.html">
             <img src="src/flight-preddiction.gif" alt="Project 2">
             <div class="title-description">
               <h4>Flight Price Prediction</h4>
