--- a/whatwedo.html
+++ b/whatwedo.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/header-footer-common.css">
     <script src="whatwedo.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="icon" href="src/club-logo.png" type="image/png">
 </head>
 
 <body>
