--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Airline Ticket Price Prediction Using XGBoost - A Student Project">
     <meta name="author" content="Mehul Wani">
     <title>Airline Ticket Price Prediction</title>
+    <link rel="icon" href="src/club-logo.png" type="image/png">
     <style>
         /* General Resets */
         * {
