--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <div id="portfolio-section" class="portfolio-body">
     <h3>Our Portfolio</h3>
-    <h2>Discover Our Recent <span class="highlight1">Projects</span><br> And <span class="highlight2">Showcases</span>
+    <h2>Discover Our Projects and <span class="highlight1">Open</span> Source<span class="highlight2"> Contributions</span>
     </h2>
     <div class="project-card-container">
       <div class="card-col">
@@ -100,17 +100,17 @@
             <img src="src/asteroid.gif" alt="Project 1">
             <div class="title-description">
               <h4>Asteroid Detection</h4>
-              <p>Detection of Asteroids using OpenCV.</p>
+              <p>Detection of Asteroids Using OpenCV.</p>
             </div>
           </a>
         </div>
         <div class="card">
           <a
-            href="projects.html">
+            href="project-description/projects-flight.html">
             <img src="src/flight-preddiction.gif" alt="Project 2">
             <div class="title-description">
               <h4>Flight Price Prediction</h4>
-              <p>This model can accurately predict flight prices</p>
+              <p>Accurate Prediction of Flight Ticket Price using XGBoost</p>
             </div>
           </a>
         </div>
@@ -119,7 +119,16 @@
             <img src="src/vertex-ai.gif" alt="Project 3">
             <div class="title-description">
               <h4>Vertex AI</h4>
-              <p>Prompt and image anlysis with Vertex AI</p>
+              <p>Prompt and Image Analysis with Vertex AI</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="https://github.com/ikshigenaimitaoe/Our-Projects/tree/master">
+            <img class="chatbot-gif" src="src/res-chatbot.gif" alt="Project 4">
+            <div class="title-description">
+              <h4>Research Paper Chatbot</h4>
+              <p>Research Paper Chatbot using Gemini-API and Langchain.</p>
             </div>
           </a>
         </div>
