--- a/ourteam.html
+++ b/ourteam.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="src/club-logo.png" alt="logo" /></a>
-                <a href="index.html">Our Team</a>
+                <a href="index.html">ikshiGen AI</a>
             </div>
             <ul class="nav-links">
                 <li><a href="aboutus.html" class="nav-link">About Us</a></li>
@@ -108,7 +108,7 @@
                             Kishorekumar Vishwanathan
                         </p>
                         <p class="text-blk position">
-                            Founder ,Lead
+                            Founder ,President
                         </p>
                         <div class="social-media-links">
                             <a href="https://www.linkedin.com/in/kishorekumar-vishwanathan-4655ab281?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"  >
@@ -133,7 +133,7 @@
                                 src="src/Sanvihita.jpg">
                         </div>
                         <p class="text-blk name">
-                            Sanvihita Shnehi
+                            Sanvihita Snehi
                         </p>
                         <p class="text-blk position">
                             Technical Team Lead
@@ -210,6 +210,36 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+                    <div class="team-card">
+                        <div class="img-wrapper">
+                            <img class="team-img"
+                                src="src/sumit.jpg" alt="sumit pic">
+                        </div>
+                        <p class="text-blk name">
+                            Harshad Gore
+                        </p>
+                        <p class="text-blk position">
+                            Project and Development Lead 
+                        </p>
+                        <div class="social-media-links">
+                            <a href="https://www.linkedin.com/in/harshad-s-gore/"  >
+                                <img
+                                    src="src/linkedin-in_.png">
+                            </a>
+                             
+                            <a href="https://www.instagram.com/ur.harshad/?utm_source=ig_web_button_share_sheet"  >
+                                <img
+                                    src="src/instagram-solid_.png">
+                            </a>
+                            <a href="mailto:harshad.gore@outlook.com">
+                                <img src="src/email_.png" alt="Email Icon">
+                            </a>                            
+                        </div>
+                    </div>
+                </div>
+
                 <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                     <div class="team-card">
                         <div class="img-wrapper">
