--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
   <title>Our Blogs - IkshiGen AI</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header-footer-common.css">
+  <link rel="icon" href="src/club-logo.png" type="image/png">
   <style>
     .container {
       display: flex;
