--- a/whatwedo.html
+++ b/whatwedo.html
@@ -191,6 +191,38 @@
         </div>
       </div>
     </div>
+    <div class="gallery_1" unique-script-id="event2" style="display: none;">
+      <div class="responsive-container-block bigContainer">
+        <div class="responsive-container-block Container">
+          <p class="text-blk heading">
+            Recruitment of the <span class="highlight3">ikshiGen AI</span>
+          </p>
+          <p class="text-blk subHeading">
+            The recruitment of the ikshiGen AI club was an exciting event, bringing together passionate individuals eager to contribute to AI advancements.
+          </p>
+          <div class="responsive-container-block imgContainer">
+            <div class="project project1">
+              <img class="smallImage" src="src/inter-img1.jpg">
+            </div>
+            <div class="project project2">
+              <img class="smallImage" src="src/inter-img2.jpg">
+            </div>
+            <div class="project project3">
+              <img class="smallImage" src="src/inter-img3.jpg">
+            </div>
+            <div class="project project4">
+              <img class="smallImage" src="src/inter-img4.jpg">
+            </div>
+            <div class="project project5">
+              <img class="smallImage" src="src/inter-img5.jpg">
+            </div>
+            <div class="project project6">
+              <img class="smallImage" src="src/inter-img6.jpg">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 
