--- a/aboutus.html
+++ b/aboutus.html
@@ -52,7 +52,9 @@
     <div class="mySlides">
       <img src="src/Designer2.png" alt="Image 1" />
       <div class="text">
+        <a href="whatwedo.html#events-body">
         <h2 class="slide-title">Club Inauguration</h2>
+        </a>
         <p class="slide-description">Join us for the inauguration of our club.</p>
       </div>
     </div>
