--- a/blog.html
+++ b/blog.html
@@ -144,6 +144,7 @@
       </a>
     </nav>
     <div class="dropdown-menu" id="dropdown-menu">
+      <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
       <a href="blog.html">Blogs</a>
