Update team member image in ourteam.html

--- a/ourteam.html
+++ b/ourteam.html
@@ -234,7 +234,7 @@
                 <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                     <div class="team-card">
                         <div class="img-wrapper">
-                            <img class="team-img" src="src/sumit.jpg" alt="sumit pic">
+                            <img class="team-img" src="src/harshad.jpg" alt="sumit pic">
                         </div>
                         <p class="text-blk name">
                             Harshad Gore
