added meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ikshiGen-AI Home</title>
+  <title>ikshiGen-AI | AI & ML Club at MITAOE</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="ikshiGen-AI is the AI & ML club of MITAOE. Join us to innovate, explore artificial intelligence, machine learning projects, and more.">
+  <meta name="keywords" content="ikshiGen-AI, MITAOE AI Club, AI club India, Machine Learning, Student AI Projects, Vertex AI, Asteroid Detection, Research Chatbot, XGBoost, Langchain, OpenCV">
+  <meta name="author" content="ikshiGen-AI Club, MITAOE">
+
+  <!-- Open Graph Meta (for sharing on Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="ikshiGen-AI | AI & ML Club at MITAOE">
+  <meta property="og:description" content="A dynamic student-led AI club exploring projects in artificial intelligence and machine learning.">
+  <meta property="og:image" content="https://ikshigenaimitaoe.github.io/src/club-logo.png">
+  <meta property="og:url" content="https://ikshigenaimitaoe.github.io">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ikshiGen-AI | AI & ML Club at MITAOE">
+  <meta name="twitter:description" content="Join the AI revolution with ikshiGen-AI Club at MITAOE. Explore our AI projects and research.">
+  <meta name="twitter:image" content="https://ikshigenaimitaoe.github.io/src/club-logo.png">
+
+  <!-- Favicon & Styles -->
+  <link rel="icon" href="src/club-logo.png" type="image/png">
   <link rel="stylesheet" href="css/header-footer-common.css">
   <link rel="stylesheet" href="css/aboutus.css">
-  <link rel="icon" href="src/club-logo.png" type="image/png">
 </head>
+
 
 <body>
 
