--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ikshiGen-AI | AI & ML Club at MITAOE</title>
-
+  <meta name="google-site-verification" content="LRca0ydfkqtxINmTBh_DE_Z8GDhetY1YJunt_-L8CGA" />
   <!-- SEO Meta Tags -->
   <meta name="description" content="ikshiGen-AI is the AI & ML club of MITAOE. Join us to innovate, explore artificial intelligence, machine learning projects, and more.">
   <meta name="keywords" content="ikshiGen-AI, MITAOE AI Club, AI club India, Machine Learning, Student AI Projects, Vertex AI, Asteroid Detection, Research Chatbot, XGBoost, Langchain, OpenCV">
